# myTextGrad

./: JustFile  flake.nix  pyproject.toml
src/: how_to_fine_tune_chat_models.py  intro_textgrad_primitives.py  multiModal.py  prompt_optimization.py  solution_optimization.py  test_time_loss_for_code.py
